--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     <div id="gui"></div>		
     <div id="canvas-container">
-        <div class="text"><div><p>Happy</p><p>Diwali</p></div>
+        <div class="text"><div><p>Happy</p><p>Diwali</p></div></div>
         <div id="skyline"></div>
+        <div class="footer"><p>Made with <span style="color: #e25555;">&#9829;</span> by Mohit</p></div>
     </div>
 
 </body>
